force-app/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AzureRedeemUrl__c</fullName>
        <label>Azure Redeem Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AzureUserId__c</fullName>
        <description>The User Id of the User in Azure Active Directory</description>
        <label>Azure AD User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_Report_Access__c</fullName>
        <description>Used in Community settings to grant access to Compensation Reports</description>
        <label>Compensation Report Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admission Officer</fullName>
                </value>
                <value>
                    <fullName>Guidance Counselor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEmailAlias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Email Alias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProvisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Provisioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProvisioningError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisioning Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>Field to identify if an SSA or SSEO has a full- or parttime contract. Used for Analytics purposes.</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fulltime</fullName>
                </value>
                <value>
                    <fullName>Parttime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoginCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of logins for a community user; this number includes all login attempts, regardless of a successful authentication via Microsoft Entra or an abandonned session before accessing the CIS Communities.</description>
        <inlineHelpText>Number of logins for a community user; this number includes all login attempts, regardless of a successful authentication via Microsoft Entra or an abandonned session before accessing the CIS Communities.</inlineHelpText>
        <label># Login Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Shopping_Cart_ID__c</fullName>
        <label>FONTEVA SYSTEM FIELD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Federated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Federated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Profile_Cover_Image__c</fullName>
        <description>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</description>
        <inlineHelpText>The secure (&quot;https://&quot;) url where the profile cover image file is located. We recommend uploaded a logo that has a width of 1100px and height of 300px.</inlineHelpText>
        <label>Profile Cover Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prefered_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Email Address</fullName>
                </value>
                <value>
                    <fullName>Work Email Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvisioningCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Provisioning Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProvisioningDatetime__c</fullName>
        <label>Provisioning Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProvisioningErrorMessage__c</fullName>
        <label>Provisioning Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__ApplicationListPage__c</fullName>
        <label>ApplicationListPage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>job</fullName>
                </value>
                <value>
                    <fullName>application</fullName>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__BHLI_LinkedInActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The status of the seatholder in LinkedIn</description>
        <label>LinkedIn Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__BHLI_LinkedInInMailHistoryLastSync__c</fullName>
        <description>Last successful Sync date time of InMail History batch</description>
        <label>LinkedIn InMail History Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__BHLI_LinkedInMember__c</fullName>
        <description>Member urn in LinkedIn</description>
        <label>LinkedIn Member</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__BHLI_LinkedInProspectNotesLastSync__c</fullName>
        <description>Last successful Sync date time of Prospect Notes batch</description>
        <label>LinkedIn Prospect Notes Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__BHLI_LinkedInSeat__c</fullName>
        <description>Recruiter Seatholder id in LinkedIn</description>
        <label>LinkedIn Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Consulting_Forecast__c</fullName>
        <label>Current Year Consulting Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Perm_Forecast__c</fullName>
        <label>Current Year Perm Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Total_Forecast__c</fullName>
        <label>Current Year Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_Contact_Fields__c</fullName>
        <label>Daxtra Search Contact Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Search_History_Fields__c</fullName>
        <label>Daxtra Search History Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__EnableJobOrderFeedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Job Order Feed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Include_in_GP_Reports__c</fullName>
        <description>Use to include user in Gross Profit reports.</description>
        <label>Include in GP Reports</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Consulting_Forecast__c</fullName>
        <label>Last Year Consulting Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Perm_Forecast__c</fullName>
        <label>Last Year Perm Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Total_Forecast__c</fullName>
        <label>Last Year Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__LinkedIn_Member_Id__c</fullName>
        <description>Store the member from the callout to seats.</description>
        <label>LinkedIn Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Linked_Seat_Id__c</fullName>
        <label>Linked Seat Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OffersListPage__c</fullName>
        <label>OffersListPage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>job</fullName>
                </value>
                <value>
                    <fullName>application</fullName>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search_Contact_Fields__c</fullName>
        <label>Resume Search Contact Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search_History_Fields__c</fullName>
        <label>Resume Search History Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Resume_Search_Saved_Fields__c</fullName>
        <label>Resume Search Saved Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SendoutsListPAge__c</fullName>
        <label>SendoutsListPAge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>job</fullName>
                </value>
                <value>
                    <fullName>application</fullName>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__SubmittalsListPage__c</fullName>
        <label>SubmittalsListPage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>job</fullName>
                </value>
                <value>
                    <fullName>application</fullName>
                </value>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Account Engagement Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Account Engagement Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Account Engagement User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Account Engagement User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Account Engagement User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Community_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Community</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/1/2024 12:00 AM</value>
        </filters>
        <label>Active Community users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator,Integration</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>CIS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CIS (Active)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_active_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>community plus</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Internal active users</label>
    </listViews>
    <listViews>
        <fullName>Knowledge_users_internal_staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KNOWLEDGE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Knowledge users (internal staff)</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Candidates</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Community Plus - Potential Candidate</value>
        </filters>
        <label>Pending Candidates</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Check_For_Valid_Email</fullName>
        <active>true</active>
        <description>Check work email, unfortunately so called &apos;plus addressing&apos; is not allowed...</description>
        <errorConditionFormula>!ISBLANK(Email) &amp;&amp; NOT(REGEX(Email, &quot;^(([^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+(\\.[^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+)*)|(\&quot;.+\&quot;))@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$&quot;))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Invalid Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_For_Valid_Personal_Email</fullName>
        <active>true</active>
        <description>Checks the personal email, unfortunately so called &apos;plus addressing&apos; is not allowed</description>
        <errorConditionFormula>!ISBLANK(Personal_Email__c) &amp;&amp; NOT(REGEX(Personal_Email__c , &quot;^(([^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+(\\.[^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+)*)|(\&quot;.+\&quot;))@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$&quot;))</errorConditionFormula>
        <errorDisplayField>Personal_Email__c</errorDisplayField>
        <errorMessage>Invalid Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_For_Valid_Work_Email</fullName>
        <active>true</active>
        <description>Checks the work email, unfortunately so called &apos;plus addressing&apos; is not allowed</description>
        <errorConditionFormula>!ISBLANK(Work_Email__c) &amp;&amp; NOT(REGEX(Work_Email__c, &quot;^(([^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+(\\.[^&lt;&gt;()\\[\\]\\\\.,;:%#~`=?&amp;/$^*!+\\s@\&quot;]+)*)|(\&quot;.+\&quot;))@((\\[[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}])|(([a-zA-Z\\-0-9]+\\.)+[a-zA-Z]{2,}))$&quot;))</errorConditionFormula>
        <errorDisplayField>Work_Email__c</errorDisplayField>
        <errorMessage>Invalid Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt;&quot;Super User Profile&quot;),
ISCHANGED( Email)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Error, change your email address under My Profile</errorMessage>
    </validationRules>
</CustomObject>